cluster/apps/media/bonob/bonob.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonob
  namespace: media
spec:
  selector:
    matchLabels:
      app: bonob
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bonob
    spec:
      containers:
        - image: simojenki/bonob:v0.6.1
          name: bonob
          ports:
            - containerPort: 3000
              name: bonob
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: bonob
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: bonob
  ports:
    - name: bonob
      port: 3000
      protocol: TCP
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bonob
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - bonob.${SECRET_DOMAIN}
      secretName: "bonob-tls"
  rules:
    - host: bonob.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bonob
                port:
                  number: 3000
